# matchup

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MATCHING_FLOWCHART.md  MATCHING_IMPLEMENTATION.md  NOTICE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark_matchup.py
cpp/: matchup_native.cpp
src/matchup/: __init__.py  _api.py
tests/: test_api.py  test_wheel_import.py
